# Haoleme

./: .gitignore  README.md  README_CN.md  README_EN.md  pyproject.toml  update-example.json  update.json
android-core/: README.md
android-core/src/main/java/com/haoleme/app/: HaolemeForegroundService.java  HaolemeNotificationCenter.java  MainActivity.java  NotificationActionReceiver.java  NotificationPolicy.java  TerminalTextRenderer.java  UpdateInstalledReceiver.java
android-core/src/test/java/com/haoleme/app/: NotificationPolicyTest.java  TerminalTextRendererTest.java
src/haoleme/: _compat.py  cli.py  cloud.py  cloud_server.py  crypto.py  server.py  store.py
tests/: test_cli.py  test_cloud.py  test_cloud_server.py  test_crypto.py  test_store.py
